--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next-auth": "^5.0.0-beta.25",
     "react": "^18.3.1",
     "react-day-picker": "^9.3.0",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "eslint": "^8",
